--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,5 +1,126 @@
 @use './base' as *;
 
+.fylo {
+  &__main {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+
+  &__box {
+    background-color: $color-primary--light;
+    border-radius: 1rem;
+    padding: 4rem;
+
+    &--one {
+      border-top-right-radius: 10rem;
+    }
+
+    &--two {
+      padding: 3rem;
+      position: relative;
+    }
+  }
+
+  &__logo {
+    margin-bottom: 3.2rem;
+  }
+
+  &__icon {
+    background-size: 2.3rem;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: $color-primary;
+    border-radius: 1rem;
+    padding: 2.5rem;
+
+    &--doc {
+      background-size: 2rem;
+      background-image: url('../images/icon-document.svg');
+    }
+
+    &--folder {
+      background-image: url('../images/icon-folder.svg');
+    }
+
+    &--upload {
+      background-image: url('../images/icon-upload.svg');
+    }
+  }
+
+  &__heading {
+    font-size: 1.4rem;
+    font-weight: 400;
+    text-align: center;
+
+    &-span {
+      font-weight: 600;
+    }
+  }
+
+  &__progress {
+    &-bar {
+      width: 100%;
+      height: 2rem;
+      background-color: rgba($color-primary, 0.6);
+      border-radius: 1rem;
+      margin: 2rem 0 1rem 0;
+      display: flex;
+      align-items: center;
+    }
+
+    &-line {
+      width: 72%;
+      height: 1.4rem;
+      background-image: $gradient-primary;
+      border-radius: 1rem;
+      margin-left: 0.4rem;
+      position: relative;
+
+      &::after {
+        content: '';
+        width: 1rem;
+        background-color: $color-secondary--light;
+        border-radius: 50%;
+        aspect-ratio: 1;
+        position: absolute;
+        top: 50%;
+        right: 0.2rem;
+        transform: translateY(-50%);
+      }
+    }
+  }
+
+  &__text {
+    font-size: 1.2rem;
+    font-weight: 600;
+  }
+
+  &__block {
+    width: 56%;
+    color: rgba($color-secondary--dark, 0.8);
+    background-color: $color-secondary--light;
+    border-radius: 1rem;
+    font-size: 1.4rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 1.5rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+
+    &-span {
+      color: $color-primary;
+      font-size: 4rem;
+    }
+  }
+}
+
 .attribution {
   font-size: 1rem;
   text-align: center;
