--- a/css/style.css
+++ b/css/style.css
@@ -51,10 +51,19 @@ body {
   grid-template-rows: 1fr auto;
   justify-items: center;
 }
+@media (min-width: 1140px) {
+  body {
+    background-color: #0c122c;
+    background-image: url("../images/bg-desktop.png");
+    background-size: 100vw;
+    background-position: bottom center;
+  }
+}
 
 .fylo__container {
   width: 87%;
-  max-width: 70rem;
+  max-width: 93rem;
+  margin-top: 5rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -70,6 +79,11 @@ body {
   align-items: center;
   justify-content: space-between;
 }
+@media (min-width: 810px) {
+  .fylo__wrapper-text {
+    margin-bottom: 0;
+  }
+}
 
 .fylo__main {
   width: 100%;
@@ -77,17 +91,39 @@ body {
   flex-direction: column;
   gap: 1.5rem;
 }
+@media (min-width: 810px) {
+  .fylo__main {
+    flex-direction: row;
+    align-items: flex-end;
+    gap: 3rem;
+  }
+}
 .fylo__box {
   background-color: #1d2c67;
   border-radius: 1rem;
+  box-shadow: 0px 25px 70px rgba(12, 18, 44, 0.7);
   padding: 4rem;
+  opacity: 0;
 }
 .fylo__box--one {
   border-top-right-radius: 10rem;
+  animation: fade-in 1s ease-in-out 0.5s alternate forwards;
+}
+@media (min-width: 810px) {
+  .fylo__box--one {
+    width: 63%;
+  }
 }
 .fylo__box--two {
+  width: 100%;
   padding: 3rem;
   position: relative;
+  animation: fade-in 1s ease-in-out 1s alternate forwards;
+}
+@media (min-width: 810px) {
+  .fylo__box--two {
+    padding: 4rem;
+  }
 }
 .fylo__logo {
   margin-bottom: 3.2rem;
@@ -99,6 +135,11 @@ body {
   background-color: #0c122c;
   border-radius: 1rem;
   padding: 2.5rem;
+  transition: all 0.3s;
+}
+.fylo__icon:hover {
+  background-color: #dddbff;
+  cursor: pointer;
 }
 .fylo__icon--doc {
   background-size: 2rem;
@@ -115,6 +156,11 @@ body {
   font-weight: 400;
   text-align: center;
 }
+@media (min-width: 810px) {
+  .fylo__heading {
+    text-align: left;
+  }
+}
 .fylo__heading-span {
   font-weight: 600;
 }
@@ -128,12 +174,13 @@ body {
   align-items: center;
 }
 .fylo__progress-line {
-  width: 72%;
+  width: 0;
   height: 1.4rem;
   background-image: linear-gradient(to right, #ffa399, #ff4d97);
   border-radius: 1rem;
   margin-left: 0.4rem;
   position: relative;
+  animation: slide-in 2.5s cubic-bezier(0.34, 1.56, 0.64, 1) 2s alternate forwards;
 }
 .fylo__progress-line::after {
   content: "";
@@ -151,21 +198,43 @@ body {
   font-weight: 600;
 }
 .fylo__block {
-  width: 56%;
+  width: 100%;
+  max-width: 18rem;
   color: rgba(132, 135, 148, 0.8);
   background-color: white;
   border-radius: 1rem;
   font-size: 1.4rem;
   font-weight: 600;
   text-transform: uppercase;
+  opacity: 0;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  padding: 1.5rem 0;
+  padding: 1.2rem 0;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  animation: fade-in 1s ease-in-out 1.5s alternate forwards;
+}
+@media (min-width: 810px) {
+  .fylo__block {
+    top: -4.5rem;
+    right: 4rem;
+    left: unset;
+    transform: unset;
+  }
+  .fylo__block::after {
+    content: "";
+    border-top: 1.5rem solid transparent;
+    border-left: 1.5rem solid transparent;
+    border-bottom: 1.5rem solid white;
+    border-right: 1.5rem solid white;
+    transform: rotate(-90deg);
+    position: absolute;
+    top: 6.4rem;
+    right: 0;
+  }
 }
 .fylo__block-span {
   color: #0c122c;
@@ -179,7 +248,28 @@ body {
 }
 .attribution__link:link, .attribution__link:visited {
   text-transform: uppercase;
+  color: white;
   transition: all 0.3s;
+}
+.attribution__link:hover, .attribution__link:active {
+  color: #dddbff;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes slide-in {
+  from {
+    width: 0;
+  }
+  to {
+    width: 73%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
