--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -6,20 +6,39 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+
+    @media (min-width: 810px) {
+      flex-direction: row;
+      align-items: flex-end;
+      gap: 3rem;
+    }
   }
 
   &__box {
     background-color: $color-primary--light;
     border-radius: 1rem;
+    box-shadow: 0px 25px 70px rgba($color-primary, 0.7);
     padding: 4rem;
+    opacity: 0;
 
     &--one {
       border-top-right-radius: 10rem;
+      animation: fade-in 1s ease-in-out 0.5s alternate forwards;
+
+      @media (min-width: 810px) {
+        width: 63%;
+      }
     }
 
     &--two {
+      width: 100%;
       padding: 3rem;
       position: relative;
+      animation: fade-in 1s ease-in-out 1s alternate forwards;
+
+      @media (min-width: 810px) {
+        padding: 4rem;
+      }
     }
   }
 
@@ -34,6 +53,12 @@
     background-color: $color-primary;
     border-radius: 1rem;
     padding: 2.5rem;
+    transition: all 0.3s;
+
+    &:hover {
+      background-color: $color-secondary;
+      cursor: pointer;
+    }
 
     &--doc {
       background-size: 2rem;
@@ -54,6 +79,10 @@
     font-weight: 400;
     text-align: center;
 
+    @media (min-width: 810px) {
+      text-align: left;
+    }
+
     &-span {
       font-weight: 600;
     }
@@ -71,12 +100,14 @@
     }
 
     &-line {
-      width: 72%;
+      width: 0;
       height: 1.4rem;
       background-image: $gradient-primary;
       border-radius: 1rem;
       margin-left: 0.4rem;
       position: relative;
+      animation: slide-in 2.5s cubic-bezier(0.34, 1.56, 0.64, 1) 2s alternate
+        forwards;
 
       &::after {
         content: '';
@@ -98,21 +129,43 @@
   }
 
   &__block {
-    width: 56%;
+    width: 100%;
+    max-width: 18rem;
     color: rgba($color-secondary--dark, 0.8);
     background-color: $color-secondary--light;
     border-radius: 1rem;
     font-size: 1.4rem;
     font-weight: 600;
     text-transform: uppercase;
+    opacity: 0;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    padding: 1.5rem 0;
+    padding: 1.2rem 0;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 1rem;
+    animation: fade-in 1s ease-in-out 1.5s alternate forwards;
+
+    @media (min-width: 810px) {
+      top: -4.5rem;
+      right: 4rem;
+      left: unset;
+      transform: unset;
+
+      &::after {
+        content: '';
+        border-top: 1.5rem solid transparent;
+        border-left: 1.5rem solid transparent;
+        border-bottom: 1.5rem solid $color-secondary--light;
+        border-right: 1.5rem solid $color-secondary--light;
+        transform: rotate(-90deg);
+        position: absolute;
+        top: 6.4rem;
+        right: 0;
+      }
+    }
 
     &-span {
       color: $color-primary;
@@ -129,12 +182,31 @@
   &__link:link,
   &__link:visited {
     text-transform: uppercase;
-    // color: $color-primary--light;
+    color: $color-secondary--light;
     transition: all 0.3s;
   }
 
   &__link:hover,
   &__link:active {
-    // color: $color-secondary;
+    color: $color-secondary;
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+@keyframes slide-in {
+  from {
+    width: 0;
+  }
+
+  to {
+    width: 73%;
   }
 }
