--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,7 +1,8 @@
 .fylo {
   &__container {
     width: 87%;
-    max-width: 70rem;
+    max-width: 93rem;
+    margin-top: 5rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,6 +20,10 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+
+      @media (min-width: 810px) {
+        margin-bottom: 0;
+      }
     }
   }
 }
