--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@ body {
   border-radius: 1rem;
   box-shadow: 0px 25px 70px rgba(12, 18, 44, 0.7);
   padding: 4rem;
+  opacity: 0;
 }
 .fylo__box--one {
   border-top-right-radius: 10rem;
@@ -173,7 +174,7 @@ body {
   align-items: center;
 }
 .fylo__progress-line {
-  width: 73%;
+  width: 0;
   height: 1.4rem;
   background-image: linear-gradient(to right, #ffa399, #ff4d97);
   border-radius: 1rem;
@@ -205,6 +206,7 @@ body {
   font-size: 1.4rem;
   font-weight: 600;
   text-transform: uppercase;
+  opacity: 0;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -251,6 +253,23 @@ body {
 }
 .attribution__link:hover, .attribution__link:active {
   color: #dddbff;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes slide-in {
+  from {
+    width: 0;
+  }
+  to {
+    width: 73%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
