--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -19,7 +19,7 @@
     border-radius: 1rem;
     box-shadow: 0px 25px 70px rgba($color-primary, 0.7);
     padding: 4rem;
-    // opacity: 0;
+    opacity: 0;
 
     &--one {
       border-top-right-radius: 10rem;
@@ -100,8 +100,7 @@
     }
 
     &-line {
-      width: 73%;
-      // width: 0;
+      width: 0;
       height: 1.4rem;
       background-image: $gradient-primary;
       border-radius: 1rem;
@@ -138,7 +137,7 @@
     font-size: 1.4rem;
     font-weight: 600;
     text-transform: uppercase;
-    // opacity: 0;
+    opacity: 0;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -193,21 +192,21 @@
   }
 }
 
-// @keyframes fade-in {
-//   from {
-//     // opacity: 0;
-//   }
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
 
-//   to {
-//     opacity: 1;
-//   }
-// }
-// @keyframes slide-in {
-//   from {
-//     width: 0;
-//   }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes slide-in {
+  from {
+    width: 0;
+  }
 
-//   to {
-//     width: 73%;
-//   }
-// }
+  to {
+    width: 73%;
+  }
+}
